--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,8 @@
 {
-  "version": 2,
   "builds": [
-    { "src": "api/index.ts", "use": "@vercel/node" }
+    { "src": "server/api/index.ts", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/" }
+    { "src": "/api/(.*)", "dest": "server/api/index.ts" }
   ]
 }
