--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,9 +1,9 @@
 {
   "version": 2,
   "builds": [
-    { "src": "src/index.ts", "use": "@vercel/node" }
+    { "src": "src/main.ts", "use": "@vercel/node" }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "src/index.ts" }
+    { "src": "/(.*)", "dest": "src/main.ts" }
   ]
 }
